[gd_scene load_steps=2 format=3 uid="uid://irfsxn8puawo"]

[ext_resource type="Script" uid="uid://b1f2i3gihuiyf" path="res://scenes/UI/Popups/fly_offer.gd" id="1_xvpm1"]

[node name="FlyOffer" type="Panel"]
offset_right = 331.0
offset_bottom = 175.0
script = ExtResource("1_xvpm1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Offer" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Offer"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AcceptBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="DenyBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Deny"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/AcceptBtn" to="." method="_on_accept_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DenyBtn" to="." method="_on_deny_btn_pressed"]
